k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitlabex
  labels:
    name: gitlabex
    environment: production
